      when combined with the the molecular surface bugfixes listed below,
      this change has the potential to make the srfm smol method give very
      different results from what was calculated in APBS 0.3.2.  Users who
      need backwards compatibility are encouraged to use the spline based
      smoothing method (srfm spl2) or the molecular surface without
      smoothing (srfm mol).
    * Made the examples directory documentation much more streamlined.
    * Added tests for examples directory.  Users can now issue a "make test" in
      the desired directory to compare local results with expected results.
      Also includes timing results for tests for comparison between 
      installations.
  - BUG FIXES
    * Fixed a bug in Vpmg_qmEnergy to remove a spurious coefficient of z_i^2
      from the energy calculation.  This generated incorrect results for
      multivalent ions (but then again, the validity of the NPBE is
      questionable for multivalents...)  (Big thanks to Vincent Chu)
    * Fixed a bug in vacc.c where atoms with radii less than 1A were not
      considered instead of atoms with no radii.
    * Fixed error in tools/mesh/dx2mol.c (Thanks to Fred Damberger)
    * Fixed floating point error which resulted in improper grid spacings for
      some cases.
    * Fixed a bug in Vacc_molAcc which generates spurious regions of high
      internal dielectric for molecular surface-based dielectric
      definitions.  These regions were very small and apparently affected
      energies by 1-2% (when used with the 'srfm mol'; the 'srfm smol' can
      potentially give larger deviations).  The new version of the molecular
      surface is actually faster (requires 50-70% of the time for most
      cases) but we should all be using the spline
      surface anyway -- right? (Thanks to John Mongan and Jessica Swanson
      for finding this bug).
    * Fixed a bug in vpmg.c that caused an assertion error when writing